--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.4.2",
     "glslify-loader": "^2.0.0",
     "next": "15.1.7",
+    "next-intl": "^3.26.3",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
