--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.7",
+    "@react-three/fiber": "^8.15.11",
     "@tailwindcss/typography": "^0.5.16",
     "@types/three": "^0.173.0",
     "framer-motion": "^12.4.2",
     "glslify-loader": "^2.0.0",
-    "next": "15.1.7",
+    "next": "^14.2.24",
     "next-intl": "^3.26.3",
     "raw-loader": "^4.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.173.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
