--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
